<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Barcode Manager</string>
    <string name="sign_up">Sign Up</string>
    <string name="inventory_drone">Inventory Drone</string>
    <string name="access_your_account">access your account</string>
    <string name="employee_id">Employee ID</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="or">or</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="name">name</string>
    <string name="description">description</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="send_instruction">send instruction</string>
    <string name="products">Products</string>
    <string name="logout">logout</string>
    <string name="add_item">+ add item</string>
    <string name="export">export</string>
    <string name="clear">clear</string>
    <string name="scan">scan</string>
    <string name="navigation_drawer_open">open navigation drawer</string>
    <string name="navigation_drawer_close">close navigation drawer</string>
    <string name="add_sheet">add sheet</string>
    <string name="clear_this_sheet_only">clear this sheet only</string>
    <string name="clear_sheets">clear sheets</string>
    <string name="sheet_is_not_existed">Sheet is not existed</string>
    <string name="sheet_is_cleared">Sheet is cleared</string>
    <string name="sheets_are_cleared">Sheets are cleared</string>
    <string name="there_is_no_sheet_to_clear">There is no sheet to clear you can add one in the ADD SHEET button above</string>
    <string name="no_sheet_is_selected">no sheet is selected</string>
    <string name="there_are_no_more_sheets">There are no more sheets</string>
    <string name="new_product">new product</string>
    <string name="type_here">type here</string>
    <string name="generate_new_barcode">Generate new barcode</string>
    <string name="print_barcode">Print barcode</string>
    <string name="copy_barcode">Copy barcode to clipboard</string>
    <string name="cancel">cancel</string>
    <string name="required">*required</string>
    <string name="new_item">new item</string>
    <string name="save">save</string>
    <string name="or_add_a_new_category">or add a new category</string>
    <string name="profile_is_existed">profile is existed</string>
    <string name="send">Send</string>


    <string name="scan_or_generate_barcode">scan or generate barcode</string>
    <string name="input_category">input category</string>
    <string name="all_data_are_required">all data are required</string>
    <string name="there_is_no_sheets_to_add">there is no sheets to add to\nadd one then try again</string>
    <string name="item_added_successfully">item added successfully</string>
    <string name="started_converting_to_excel">started converting to excel file</string>
    <string name="completed">completed</string>
    <string name="error">error</string>
    <string name="creating_new_sheet">Creating new sheet</string>
    <string name="sheet_is_redundant">Sheet is redundant</string>
    <string name="sheet_is_empty">Sheet is empty</string>
    <string name="sheet_is_created">Sheet is created</string>
    <string name="clearing_sheet">Clearing sheet</string>
    <string name="what_do_you_want_to_do">What do you want to do</string>
    <string name="there_is_something_wrong_select_sheet_again">There is something wrong select sheet again</string>
    <string name="category">category</string>
    <string name="quantity">quantity</string>
    <string name="notes">notes</string>
    <string name="location">location</string>
    <string name="sheet">sheet</string>
    <string name="barcode_error">barcode error</string>
    <string name="signed_in_successfully">signed in successfully</string>
    <string name="employee_id_or_email_or_password_is_not_correct">employee id or email or password is not correct</string>
    <string name="enter_missing_data">Enter missing data</string>
    <string name="password_is_under_9_letters">password is under 9 letters</string>
    <string name="registered_successfully">Registered successfully</string>
    <string name="barcode_generated">Barcode generated</string>
    <string name="copied_to_clipboard">Copied to clipboard!</string>
    <string name="your_barcode_is">your barcode is</string>
    <string name="type">type</string>
    <string name="sign_in">sign in</string>
</resources>