<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Signin">
   <TextView
       android:id="@+id/text_signin"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"

       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"

       android:layout_marginTop="10dp"

       android:textSize="30sp"
       android:text="@string/sign_in"
       />
    <TextView
        android:id="@+id/text_accessyouraccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_signin"

        android:layout_marginTop="10dp"

        android:textSize="30sp"
        android:text="@string/access_your_account"
        />
    <EditText
        android:id="@+id/employee_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_accessyouraccount"

        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        android:layout_marginTop="30dp"
        android:hint="@string/employee_id"

        android:inputType="number"
        android:singleLine="true"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/employee_id"

        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        android:hint="@string/email"

        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"

        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        android:hint="@string/password"

        android:inputType="textPassword"
        android:autofillHints="password"
        />
    <Button
        android:id="@+id/signin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"

        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        android:text="@string/sign_in"
        />

 <TextView
     android:id="@+id/or"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"

     android:layout_marginTop="36dp"
     android:text="@string/or"
     android:textSize="30sp"

     app:layout_constraintEnd_toEndOf="parent"

     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/signin" />

 <Button
     android:id="@+id/signin_signup"
     android:layout_width="150dp"
     android:layout_height="wrap_content"

     android:layout_marginTop="16dp"

     android:text="@string/sign_up"
     app:layout_constraintBottom_toBottomOf="parent"

     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/or" />

</androidx.constraintlayout.widget.ConstraintLayout>