<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Signup">

    <EditText
        android:id="@+id/employee_id_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"

        android:hint="@string/employee_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:inputType="number"
        android:singleLine="true"
        />

    <EditText
        android:id="@+id/name_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"

        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/employee_id_signup"

        android:inputType="text"
        android:singleLine="true"
        />

    <EditText
        android:id="@+id/email_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"

        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_signup"

        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:singleLine="true"
        />

    <EditText
        android:id="@+id/password_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"

        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_signup"

        android:inputType="textPassword"
        android:autofillHints="password"
        />

    <Button
        android:id="@+id/signup"
        android:layout_width="150dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_signup"

        android:text="@string/sign_up"
        />
</androidx.constraintlayout.widget.ConstraintLayout>