<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ItemsActivity"
    tools:openDrawer="end"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"

            android:layout_gravity="end"
            android:elevation="4dp"
            android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"

            >

            <TextView
                android:id="@+id/toolbarTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textAppearance="@android:style/TextAppearance.WindowTitle"

                />

            <Spinner
                android:id="@+id/sheets_select"
                android:layout_width="150dp"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:popupBackground="@color/black"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar"

                />

            <ImageButton
                android:id="@+id/options"
                android:layout_width="70dp"
                android:layout_height="50dp"

                android:layout_marginEnd="5dp"
                android:background="@drawable/options"
                android:layout_gravity="end"
                />

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/add_item_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_item"
                android:layout_weight="1"

                />
            <Button
                android:id="@+id/add_sheet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_sheet"
                android:layout_weight="1"

                />
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/items"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="100dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"


            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/export_button"
                android:layout_width="200dp"
                android:layout_height="50dp"

                android:text="@string/export" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/clear_sheet_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:text="@string/clear" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/scan"
            android:textColor="@color/white"

            android:background="@drawable/circle_button"

            app:layout_constraintTop_toTopOf="@id/linearLayout"
            app:layout_constraintBottom_toBottomOf="@id/linearLayout"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            />




    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.drawerlayout.widget.DrawerLayout>